--- a/webstorage.html
+++ b/webstorage.html
@@ -1,81 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>localStorage()</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-    <script>
-    $(document).ready(function() {
-        if (typeof(localStorage) == 'undefined' ) {
-            alert('Your browser does not support HTML5 localStorage. Try upgrading.');
-        } else {
-            getAllItems(); //load the items
-            
-            $("#logForm").submit(function(){
-                var newDate = new Date();
-                var itemId = newDate.getTime();
-                var values = new Array();
-                var project = $("input[name='project']").val();
-                var hours = $("input[name='hours']").val();
-                var date = $("input[name='date']").val();
+	<head>
+	    <title>Web Storage Example</title>
+	    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+	    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	    <script>
+		    $(document).ready(function() {
+		        if (typeof(localStorage) == 'undefined' ) {
+		            alert('Your browser does not support HTML5 localStorage. Try upgrading.');
+		        } else {
+		            getAllItems(); //load the items
 
-                //strip html tags
-                project = project.replace(/(<([^>]+)>)/ig, "");
-                values.push(project);
-                values.push(hours);
-                values.push(date);
+		            $("#logForm").submit(function(){
+		                var newDate = new Date();
+		                var itemId = newDate.getTime();
+		                var values = new Array();
+		                var project = $("input[name='project']").val();
+		                var hours = $("input[name='hours']").val();
+		                var date = $("input[name='date']").val();
 
-                if (project != "" && hours != "" && date != "") {
-                    try {
-                        localStorage.setItem(itemId, values.join(';'));
-                    } catch (e) {
-                        if (e == QUOTA_EXCEEDED_ERR) {
-                            alert('Quota exceeded!');
-                        }
-                    }
-                } else {
-                    alert("All fields are required.");
-                }
-            });
-        }
-    });
-	
-    function getAllItems() {
-        var timeLog = ""; //the variable that will hold our html
-        var i = 0;
-        var logLength = localStorage.length-1; //how many items are in the database starting with zero
+		                //strip html tags
+		                project = project.replace(/(<([^>]+)>)/ig, "");
+		                values.push(project);
+		                values.push(hours);
+		                values.push(date);
 
-        //now we are going to loop through each item in the database
-        for (i = 0; i <= logLength; i++) {
-            //lets setup some variables for the key and values
-            var itemKey = localStorage.key(i);
-            var values = localStorage.getItem(itemKey);
-            values = values.split(";"); //create an array of the values
-            var project = values[0];
-            var hours = values[1];
-            var date = values[2];
+		                if (project != "" && hours != "" && date != "") {
+		                    try {
+		                        localStorage.setItem(itemId, values.join(';'));
+		                    } catch (e) {
+		                        if (e == QUOTA_EXCEEDED_ERR) {
+		                            alert('Quota exceeded!');
+		                        }
+		                    }
+		                } else {
+		                    alert("All fields are required.");
+		                }
+		            });
+		        }
+		        $(".delete").click(function() {
+				 	if (confirm("Are you sure you want to delete this time?")) {
+				        var itemKey = $(this).attr("name");
+				        localStorage.removeItem(itemKey);
+				        getAllItems(); //refresh the list of items
+				    }
+				});
 
-            //now that we have the item, lets add it as a list item
-            timeLog += '<li><strong>'+project+'</strong>: '+hours+' hours - '+date+'</li>';
-        }
+				$("#clearLog").click(function() {
+					if(confirm("Are you sure you want to clear the log?")) {
+		                localStorage.clear();
+		                getAllItems();
+					}		            
+				});
+		    });
 
-        //if there were no items in the database
-        if (timeLog == "")
-            timeLog = '<li class="empty">Log Currently Empty</li>';
+			function deleteItem() {
+			    var deleteItemDialog = new Array();
+			    $(".delete").each(function() {
+			        var id = $(this).find("span").attr("id");
+			        deleteItemDialog[id] = $("#"+id).dialog({
+			            autoOpen: false,
+			            resizable: false,
+			            height: 140,
+			            modal: true,
+			            show: 'fold',
+			            buttons: {
+			                'Delete Time': function() {
+			                    localStorage.removeItem(id);
+			                    getAllItems();
+			                    $(this).dialog("close");
+			                },
+			                Cancel: function() {
+			                    $(this).dialog("close");
+			                }
+			            }
+			        });
+			 
+			        $(this).click(function(){
+			            deleteItemDialog[id].dialog("open");
+			            return false;
+			        });
+			    });
+			}
+			
+		    function getAllItems() {
+		        var timeLog = "<thead><tr><th>Project Name</th><th>Hours</th><th>Date</th><th>Actions</th></tr></thead>"; //the variable that will hold our html
+		        var i = 0;
+		        var logLength = localStorage.length-1; //how many items are in the database starting with zero
 
-        $("#theLog").html(timeLog); //update the ul with the list items
-    }
-    </script>
-</head>
-<body>
-    <form id="logForm" method="post">
-        <input type="text" name="project" value="Project Name">
-        <input type="number" name="hours" value="Hours" class="shortField">
-        <input type="text" name="date" value="Date" class="shortField">
-        <input type="submit" value="Log Time">
-    </form>
+		        //now we are going to loop through each item in the database
+		        for (i = 0; i <= logLength; i++) {
+		            //lets setup some variables for the key and values
+		            var itemKey = localStorage.key(i);
+		            var values = localStorage.getItem(itemKey);
+		            values = values.split(";"); //create an array of the values
+		            var project = values[0];
+		            var hours = values[1];
+		            var date = values[2];
 
-    <ul id="theLog">
-        <li>Loading&hellip;</li>
-    </ul>
-</body>
+		            //now that we have the item, lets add it as a list item
+		            timeLog += '<tr><td>' + project + '</td><td>' + hours + '</td><td>' + date + '</td><td><button name="' + itemKey + '" class="delete btn btn-danger"><span class="glyphicon glyphicon-trash"></span> Delete</button></td></tr>';
+		        }
+
+		        //if there were no items in the database
+		        if (timeLog == "")
+		            timeLog = '<li class="empty">Log Currently Empty</li>';
+
+		        $("#theLog").html(timeLog); //update the ul with the list items
+		    }
+	    </script>
+	</head>
+	<body>
+	    <form id="logForm" class="well form form-inline" method="post">
+	        <input class="form-control" type="text" name="project" placeholder="Project Name">
+	        <input class="form-control" type="number" name="hours" placeholder="Hours">
+	        <input class="form-control" type="date" name="date">
+	        <input class="btn btn-success" type="submit" value="Log Time">
+	        <button class="btn btn-danger" id="clearLog" type="button">Clear Log</button>
+	    </form>
+
+	    <table class="table table-striped" id="theLog">
+	    </table>
+	</body>
 </html>
