Needed some padding and a title

--- a/webstorage.html
+++ b/webstorage.html
@@ -111,7 +111,8 @@
 		    }
 	    </script>
 	</head>
-	<body>
+	<body style="padding:10px;">
+		<h1>Web Storage Demo</h1>
 	    <form id="logForm" class="well form form-inline" method="post">
 	        <input class="form-control" type="text" name="project" placeholder="Project Name">
 	        <input class="form-control" type="number" name="hours" placeholder="Hours">
