--- a/webstorage.html
+++ b/webstorage.html
@@ -5,6 +5,8 @@
 	    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 	    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	    <link href="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet">
+	    <script src="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 	    <script>
 		    $(document).ready(function() {
 		        if (typeof(localStorage) == 'undefined' ) {
@@ -39,13 +41,6 @@
 		                }
 		            });
 		        }
-		        $(".delete").click(function() {
-				 	if (confirm("Are you sure you want to delete this time?")) {
-				        var itemKey = $(this).attr("name");
-				        localStorage.removeItem(itemKey);
-				        getAllItems(); //refresh the list of items
-				    }
-				});
 
 				$("#clearLog").click(function() {
 					if(confirm("Are you sure you want to clear the log?")) {
@@ -83,6 +78,14 @@
 			        });
 			    });
 			}
+
+			function deleteItem(button) {
+				if (confirm("Are you sure you want to delete this time?")) {
+			        var itemKey = $(button).attr("name");
+			        localStorage.removeItem(itemKey);
+			        getAllItems(); //refresh the list of items
+			    }
+			}
 			
 		    function getAllItems() {
 		        var timeLog = "<thead><tr><th>Project Name</th><th>Hours</th><th>Date</th><th>Actions</th></tr></thead>"; //the variable that will hold our html
@@ -100,7 +103,7 @@
 		            var date = values[2];
 
 		            //now that we have the item, lets add it as a list item
-		            timeLog += '<tr><td>' + project + '</td><td>' + hours + '</td><td>' + date + '</td><td><button name="' + itemKey + '" class="delete btn btn-danger"><span class="glyphicon glyphicon-trash"></span> Delete</button></td></tr>';
+		            timeLog += '<tr><td>' + project + '</td><td>' + hours + '</td><td>' + date + '</td><td><button onclick="deleteItem(this)" name="' + itemKey + '" class="delete btn btn-danger"><span class="glyphicon glyphicon-trash"></span> Delete</button></td></tr>';
 		        }
 
 		        //if there were no items in the database
